--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
+	},
+	"dependencies": {
+		"@prisma/client": "^4.11.0"
 	}
 }
