--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
 		"svelte": "^3.56.0",
 		"svelte-check": "^3.1.2",
 		"svelte-preprocess": "^5.0.1",
+		"sveltekit-superforms": "^0.5.23",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
 		"vite": "^4.1.4",
-		"vitest": "^0.29.2"
+		"vitest": "^0.29.2",
+		"zod": "^3.21.4"
 	},
 	"dependencies": {
 		"@lucia-auth/adapter-prisma": "^0.6.0",
