--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
 		"prettier-plugin-tailwindcss": "^0.2.4",
+		"prisma": "^4.11.0",
 		"svelte": "^3.56.0",
 		"svelte-check": "^3.1.2",
 		"svelte-preprocess": "^5.0.1",
