--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
+# Prisma
 DATABASE_URL="file:./dev.db"
+
+# Stripe
+PUBLIC_STRIPE_KEY="pk_test_1234"
+SECRET_STRIPE_KEY="sk_test_1234"
+STRIPE_WEBHOOK_SECRET="we_1234"
