--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"@lucia-auth/sveltekit": "^0.6.10",
 		"@prisma/client": "^4.11.0",
 		"lucia-auth": "^0.9.0",
-		"lucide-svelte": "^0.125.0"
+		"lucide-svelte": "^0.125.0",
+		"stripe": "^11.15.0"
 	}
 }
